src/test/deca/context/invalid/classmethode3.deca
class A{
    int methode(){
        int methode2(){
            
        }
    }
} 
{
    int a=new A();
    
}